# DocSynth

./: .editorconfig  .gitignore  20-docsynth.md  AGENTS.md  README.md
.github/workflows/: ci.yml
.specify/: feature.json
.specify/extensions/: .registry
.specify/integrations/: opencode.manifest.json  speckit.manifest.json
.specify/memory/: constitution.md
.specify/workflows/: workflow-registry.json
ai-sidecar/: pyproject.toml
ai-sidecar/src/docsynth_ai/: server.py
ai-sidecar/src/docsynth_ai/observability/: tracing.py
ai-sidecar/src/docsynth_ai/pipelines/: code_examples.py  description_enhance.py
ai-sidecar/src/docsynth_ai/prompts/: code_example_v1.yaml  description_enhance_v1.yaml
backend/: pom.xml
contracts/proto/: ai_orchestration.proto  buf.gen.yaml  drift.proto  ingestion.proto
docs/: README.md  linkedin-pitch.md  presentation.md
frontend/: package.json
frontend/e2e/: docs_render.spec.ts  drift.spec.ts  ingestion.spec.ts  tryit.spec.ts  versioned_publishing.spec.ts
frontend/src/docs/: types.ts
infra/: main.tf
infra/modules/aks/: main.tf
infra/modules/blobstorage/: main.tf
infra/modules/frontdoor/: main.tf
infra/modules/keyvault/: main.tf
infra/modules/postgres/: main.tf  verify-backup.tf
infra/modules/servicebus/: main.tf
specs/001-docsynth-core/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/001-docsynth-core/checklists/: requirements.md
specs/001-docsynth-core/contracts/: README.md
specs/evals/: thresholds.yml
specs/evals/code_examples/: test_faithfulness.py  test_relevance.py
(+190 files in other folders)
