[project]
name = "docsynth-ai-sidecar"
version = "0.1.0"
description = "DocSynth AI sidecar (model plane)"
requires-python = "3.12"
dependencies = [
    "langchain>=0.3,<0.4",
    "llama-index>=0.12,<0.14",
    "grpcio>=1.66",
    "grpcio-tools>=1.66",
    "pydantic>=2.7",
    "opentelemetry-api>=1.27",
    "opentelemetry-sdk>=1.27",
    "opentelemetry-exporter-otlp-proto-grpc>=1.27",
    "opentelemetry-instrumentation-grpc>=0.48b0",
    "python-json-logger>=2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "mypy>=1.10",
    "ruff>=0.5",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/docsynth_ai"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra"

[tool.mypy]
python_version = "3.12"
strict = true

[tool.ruff]
line-length = 100
target-version = "py312"
